# ShaderInjector

./: .gitignore  ConfigurationGuide.md  CrossVersionDiscovery.md  INSTALL.md  InjectorSettings.md  IssueReport.md  LiveShaderEditing.md  README.md  Solutions.md  UPDATE.md
PixelShaders/: DirectionalLightShader.hlsl  LocalLightShader.hlsl
ShaderInjector/: DatabaseGraphicsPSOs.cpp  DatabaseModifiedShaders.cpp  DatabaseShaderReplacements.cpp  DatabaseShaderTargets.cpp  DatabaseStreamPSOs.cpp  Globals.cpp  Globals.h  HookD3D12.cpp  HookD3D12.h  HookD3D12Install.cpp  HookD3D12Originals.cpp  HookD3D12OverlayStartup.cpp  HookD3D12PipelineLibrary.cpp  HookD3D12PipelineUtils.cpp  HookD3D12PipelineUtils.h  HookD3D12ReplacementCreation.cpp  HookD3D12ReplacementLookup.cpp  HookInput.cpp  (+35 more)
Tests/CrossVersionDiscovery/: CMakeLists.txt  README.md
Tests/CrossVersionDiscovery/compat/: msvc_compat.h
Tests/CrossVersionDiscovery/data/case01-real-captures/directional-light/v1.004/: modified-shader.blob  modified-shader.hlsl  package.json
Tests/CrossVersionDiscovery/data/case01-real-captures/directional-light/v1.005/: package.json
Tests/CrossVersionDiscovery/data/case01-real-captures/local-light/v1.004/: package.json
Tests/CrossVersionDiscovery/data/case01-real-captures/local-light/v1.005/: modified-shader.blob  modified-shader.hlsl  package.json
Tests/CrossVersionDiscovery/src/: CrossVersionDiscoveryTests.cpp  DiscoveryLogicMirror.cpp  DiscoveryLogicMirror.h  FixtureLoader.h  ModifiedShaderMatching.cpp  ModifiedShaderMatching.h  SimilarityDiagnostics.cpp  SimilarityDiagnostics.h
(+121 files in other folders)
